fastcarto/fastdb/include/fastdb_payload.h

#define FDB_PAYLOAD_V1_ABI_VERSION UINT32_C(1)
#define FDB_PAYLOAD_V1_SHA256_SIZE UINT32_C(32)
#define FDB_PAYLOAD_V1_COMPILE_OPTIONS_V1_SIZE UINT32_C(80)
#define FDB_PAYLOAD_V1_CAPABILITIES_V1_SIZE UINT32_C(72)
#define FDB_PAYLOAD_V1_BUILDER_OPTIONS_V2_SIZE UINT32_C(96)
#define FDB_PAYLOAD_V1_OPEN_OPTIONS_V1_SIZE UINT32_C(112)
#define FDB_PAYLOAD_V1_PLAN_INFO_V2_SIZE UINT32_C(112)
#define FDB_PAYLOAD_V1_EXECUTION_REPORT_V1_SIZE UINT32_C(72)
#define FDB_PAYLOAD_V1_INVALID_OBJECT_HANDLE UINT64_C(0)
#define FDB_PAYLOAD_PROFILE_RECORD_V1 UINT32_C(1)
#define FDB_PAYLOAD_PROFILE_OBJECT_GRAPH_V1 UINT32_C(2)
#define FDB_PAYLOAD_BUILD_ALLOW_STAGING UINT32_C(1)
#define FDB_PAYLOAD_BUILD_REQUIRE_DIRECT UINT32_C(2)
#define FDB_PAYLOAD_RESERVE_DIRECT UINT32_C(1)
#define FDB_PAYLOAD_RESERVE_STAGED UINT32_C(2)
#define FDB_PAYLOAD_EXECUTION_DIRECT UINT32_C(1)
#define FDB_PAYLOAD_EXECUTION_STAGED UINT32_C(2)
#define FDB_PAYLOAD_FALLBACK_NONE UINT32_C(0)
#define FDB_PAYLOAD_FALLBACK_PLAN_REQUIRES_STAGING UINT32_C(1)
#define FDB_PAYLOAD_FALLBACK_BACKING_DECLINED_DIRECT UINT32_C(2)
#define FDB_PAYLOAD_OPEN_VALIDATE_TEXT_EAGER (UINT32_C(1) << 0)
#define FDB_PAYLOAD_E_DIRECT_UNAVAILABLE UINT32_C(2007)
#define FDB_PAYLOAD_E_BACKING_CONTRACT UINT32_C(5001)
#define FDB_PAYLOAD_E_ALLOCATION_FAILED UINT32_C(5002)
#define FDB_PAYLOAD_E_COMMIT_FAILED UINT32_C(5003)
#define FDB_PAYLOAD_E_ROLLBACK_FAILED UINT32_C(5004)
#define FDB_PAYLOAD_E_UNSUPPORTED_ABI UINT32_C(7002)
#define FDB_PAYLOAD_E_INTERNAL UINT32_C(9001)
typedef uint32_t fdb_payload_v1_status_t;
typedef uint32_t fdb_payload_v1_profile_t;
typedef struct fdb_payload_v1_spec fdb_payload_v1_spec_t;
typedef struct fdb_payload_v1_blob fdb_payload_v1_blob_t;
typedef struct fdb_payload_v1_error fdb_payload_v1_error_t;
typedef struct fdb_payload_v1_builder fdb_payload_v1_builder_t;
typedef struct fdb_payload_v1_plan fdb_payload_v1_plan_t;
typedef struct fdb_payload_v1_payload fdb_payload_v1_payload_t;
typedef struct fdb_payload_v1_compile_options {
    uint32_t struct_size;
    uint32_t flags;
    uint64_t max_source_bytes;
    uint64_t max_json_values;
    uint32_t max_nesting_depth;
    uint32_t max_entries;
    uint32_t max_components;
    uint32_t max_fields_per_component;
    uint64_t max_total_fields;
    uint64_t reserved[4];
} fdb_payload_v1_compile_options_t;
typedef struct fdb_payload_v1_capabilities {
    uint32_t struct_size;
    uint32_t profile;
    uint64_t semantic_flags;
    uint64_t operation_flags;
    uint64_t codegen_target_flags;
    uint32_t direct_build_status;
    uint32_t reserved32;
    uint64_t reserved64[4];
} fdb_payload_v1_capabilities_t;
typedef struct fdb_payload_v1_builder_options {
    uint32_t struct_size;
    uint32_t flags;
    uint64_t max_value_nodes;
    uint64_t max_list_elements;
    uint64_t max_text_bytes;
    uint64_t max_opaque_bytes;
    uint64_t max_nesting_depth;
    uint64_t max_total_builder_bytes;
    uint64_t reserved[4];
    uint64_t max_graph_objects;
} fdb_payload_v1_builder_options_t;
typedef struct fdb_payload_v1_open_options {
    uint32_t struct_size;
    uint32_t flags;
    uint64_t max_total_bytes;
    uint64_t max_regions;
    uint64_t max_entries;
    uint64_t max_components;
    uint64_t max_nesting_depth;
    uint64_t max_list_elements;
    uint64_t max_graph_objects;
    uint64_t max_string_bytes;
    uint64_t max_validation_work;
    uint64_t reserved[4];
} fdb_payload_v1_open_options_t;
typedef struct fdb_payload_v1_plan_info {
    uint32_t struct_size;
    uint32_t flags;
    uint64_t total_bytes;
    uint64_t region_count;
    uint64_t logical_value_count;
    uint64_t list_element_count;
    uint64_t text_bytes;
    uint64_t opaque_bytes;
    uint64_t validation_work;
    uint32_t max_alignment;
    uint32_t direct_build_status;
    uint64_t reserved[4];
    uint64_t graph_object_count;
} fdb_payload_v1_plan_info_t;
typedef struct fdb_payload_v1_execution_report {
    uint32_t struct_size;
    uint32_t mode;
    uint32_t fallback_reason;
    uint32_t reserved32;
    uint64_t requested_bytes;
    uint64_t used_bytes;
    uint64_t staging_bytes;
    uint64_t region_count;
    uint64_t backing_capacity;
    uint64_t reserved64[2];
} fdb_payload_v1_execution_report_t;
typedef struct fdb_payload_v1_fixed_run_v1 {
    uint32_t struct_size;
    uint32_t flags;
    const void* data;
    uint64_t data_byte_length;
    uint64_t count;
    uint64_t stride_bytes;
    const uint8_t* validity;
    uint64_t validity_byte_length;
    uint64_t validity_bit_offset;
    uint64_t reserved[4];
} fdb_payload_v1_fixed_run_v1_t;
typedef fdb_payload_v1_status_t (*fdb_payload_v1_backing_reserve_fn)(
    void* context,
    uint32_t reserve_mode,
    uint64_t minimum_capacity,
    uint32_t alignment,
    void** out_owner_token,
    uint8_t** out_writable_data,
    uint64_t* out_capacity);
typedef fdb_payload_v1_status_t (*fdb_payload_v1_backing_write_fn)(
    void* context,
    void* owner_token,
    uint64_t offset,
    const uint8_t* source,
    uint64_t source_size);
typedef fdb_payload_v1_status_t (*fdb_payload_v1_backing_commit_fn)(
    void* context,
    void* owner_token,
    uint64_t used_size,
    const uint8_t** out_readable_data,
    uint64_t* out_readable_size);
typedef fdb_payload_v1_status_t (*fdb_payload_v1_backing_rollback_fn)(
    void* context,
    void* owner_token);
typedef fdb_payload_v1_status_t (*fdb_payload_v1_backing_retain_fn)(
    void* context,
    void* owner_token);
typedef void (*fdb_payload_v1_backing_release_fn)(void* context,
                                                  void* owner_token);
/*
 * A backing table is borrowed for the call, validated through release, and
 * copied into Core-owned state. struct_size must cover that known prefix;
 * known flags and every fully covered known reserved word must be zero. A
 * larger unknown tail is ignored. Build requires reserve/commit/rollback/
 * release; write may be null only when reserve supplies a stable writable
 * base. External open requires retain/release. owner_token may be null and is
 * never dereferenced by Core.
 *
 * Callback statuses are closed. Direct reserve accepts zero,
 * DIRECT_UNAVAILABLE, or ALLOCATION_FAILED; staged reserve accepts zero or
 * ALLOCATION_FAILED. Write and retain accept zero or ALLOCATION_FAILED. Commit
 * additionally accepts COMMIT_FAILED; rollback additionally accepts
 * ROLLBACK_FAILED (and maps ALLOCATION_FAILED to ROLLBACK_FAILED). Every other
 * nonzero status is BACKING_CONTRACT. Core initializes callback outputs to
 * null/zero and ignores any values written by a failed callback.
 *
 * Successful reserve creates one uncommitted reference: a later pre-commit
 * failure gets exactly one rollback, while successful commit transfers one
 * committed reference that is never rolled back and is eventually released.
 * Reserve failure creates no reference and gets neither rollback nor release.
 * Successful retain creates one committed reference; retain failure creates
 * none and gets no release. The context and copied callbacks must remain
 * callable until the corresponding rollback or release completes.
 *
 * Callbacks are synchronous and non-throwing. Within one plan execution, Core
 * invokes reserve/write/commit/rollback serially. retain and release must be
 * thread-safe because independent payload/open lifetimes may invoke them
 * concurrently. A callback must not re-enter a FastDB operation on the same
 * context/owner token when that operation can invoke or wait for the same
 * callback. Distinct contexts/tokens may re-enter.
 */
typedef struct fdb_payload_v1_backing_v1 {
    uint32_t struct_size;
    uint32_t flags;
    void* context;
    fdb_payload_v1_backing_reserve_fn reserve;
    fdb_payload_v1_backing_write_fn write;
    fdb_payload_v1_backing_commit_fn commit;
    fdb_payload_v1_backing_rollback_fn rollback;
    fdb_payload_v1_backing_retain_fn retain;
    fdb_payload_v1_backing_release_fn release;
    uint64_t reserved[4];
} fdb_payload_v1_backing_v1_t;
FDB_PAYLOAD_API uint32_t fdb_payload_v1_abi_version(void);
/* A null output is accepted. Present output receives compile V1 defaults. */
FDB_PAYLOAD_API void fdb_payload_v1_compile_options_init(
    fdb_payload_v1_compile_options_t* options);
/* A null output is accepted. Present output receives empty V1 capabilities. */
FDB_PAYLOAD_API void fdb_payload_v1_capabilities_init(
    fdb_payload_v1_capabilities_t* capabilities);
/* Present output receives builder-limit V2 defaults; null is accepted. */
FDB_PAYLOAD_API void fdb_payload_v1_builder_options_init(
    fdb_payload_v1_builder_options_t* options);
/* Present output receives target sizeof and null/zero members; null is accepted. */
FDB_PAYLOAD_API void fdb_payload_v1_fixed_run_init(
    fdb_payload_v1_fixed_run_v1_t* run);
/* Present output receives safe open-limit V1 defaults; null is accepted. */
FDB_PAYLOAD_API void fdb_payload_v1_open_options_init(
    fdb_payload_v1_open_options_t* options);
/* Present output receives a zeroed V2 plan-info report; null is accepted. */
FDB_PAYLOAD_API void fdb_payload_v1_plan_info_init(
    fdb_payload_v1_plan_info_t* info);
/* Present output receives a zeroed V1 execution report; null is accepted. */
FDB_PAYLOAD_API void fdb_payload_v1_execution_report_init(
    fdb_payload_v1_execution_report_t* report);
/* Present output receives target sizeof and null/zero members; null is accepted. */
FDB_PAYLOAD_API void fdb_payload_v1_backing_init(
    fdb_payload_v1_backing_v1_t* backing);
/*
 * Compiles the borrowed source byte span before returning. A null source is
 * valid only when source_size is zero. A null options pointer selects V1
 * defaults. A supplied options structure must declare at least the V1 prefix;
 * a larger future tail is ignored. On success, out_spec receives one owned,
 * immutable, thread-safe handle.
 */
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_compile_json(
    const uint8_t* source,
    uint64_t source_size,
    const fdb_payload_v1_compile_options_t* options,
    fdb_payload_v1_spec_t** out_spec,
    fdb_payload_v1_error_t** out_error);
/* Null is accepted. Each retain owns one matching release. */
FDB_PAYLOAD_API void fdb_payload_v1_spec_retain(fdb_payload_v1_spec_t* spec);
FDB_PAYLOAD_API void fdb_payload_v1_spec_release(fdb_payload_v1_spec_t* spec);
/*
 * Immutable spec queries are thread-safe. Each blob output is a fresh owned
 * handle whose bytes remain valid independently of the spec. Digest, profile,
 * capability, count, and index outputs are copied. A capabilities structure
 * must declare at least the V1 prefix; only that prefix is written and a
 * larger future tail is preserved.
 */
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_canonical_json(
    const fdb_payload_v1_spec_t* spec,
    fdb_payload_v1_blob_t** out_blob,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_sha256(
    const fdb_payload_v1_spec_t* spec,
    uint8_t out_digest[FDB_PAYLOAD_V1_SHA256_SIZE],
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_manifest_json(
    const fdb_payload_v1_spec_t* spec,
    fdb_payload_v1_blob_t** out_blob,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_profile(
    const fdb_payload_v1_spec_t* spec,
    fdb_payload_v1_profile_t* out_profile,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_capabilities(
    const fdb_payload_v1_spec_t* spec,
    fdb_payload_v1_capabilities_t* out_capabilities,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_entry_count(
    const fdb_payload_v1_spec_t* spec,
    uint32_t* out_count,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_entry_id(
    const fdb_payload_v1_spec_t* spec,
    uint32_t entry_index,
    fdb_payload_v1_blob_t** out_id,
    fdb_payload_v1_error_t** out_error);
/* ID bytes are borrowed only for the duration of the call. */
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_entry_index(
    const fdb_payload_v1_spec_t* spec,
    const uint8_t* id,
    uint64_t id_size,
    uint32_t* out_entry_index,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_component_count(
    const fdb_payload_v1_spec_t* spec,
    uint32_t* out_count,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_component_id(
    const fdb_payload_v1_spec_t* spec,
    uint32_t component_index,
    fdb_payload_v1_blob_t** out_id,
    fdb_payload_v1_error_t** out_error);
/* ID bytes are borrowed only for the duration of the call. */
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_component_index(
    const fdb_payload_v1_spec_t* spec,
    const uint8_t* id,
    uint64_t id_size,
    uint32_t* out_component_index,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_spec_component_field_count(
    const fdb_payload_v1_spec_t* spec,
    uint32_t component_index,
    uint32_t* out_count,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_spec_component_field_id(
    const fdb_payload_v1_spec_t* spec,
    uint32_t component_index,
    uint32_t field_index,
    fdb_payload_v1_blob_t** out_id,
    fdb_payload_v1_error_t** out_error);
/* ID bytes are borrowed only for the duration of the call. */
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_spec_component_field_index(
    const fdb_payload_v1_spec_t* spec,
    uint32_t component_index,
    const uint8_t* id,
    uint64_t id_size,
    uint32_t* out_field_index,
    fdb_payload_v1_error_t** out_error);